# rakarrack

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  EFFECT_PARAMETERS.md  QT6_MIGRATION_PLAN.md  README  README.md  configure.ac  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build-linux.yml  build-macos.yml  build-msys2.yml  build-windows.yml
cmake/: c_cpp_properties.json.in  compiler.cmake  config.h.in  config.hpp.in  embed_resource.cmake  settings.json.in  vscode.cmake
data/: rakarrack.desktop
doc/help/: effects.html  general.html
extra/: CMakeLists.txt  README.md  rakconvert.C  rakconvert.cpp  rakconvert_lib.cpp  rakconvert_lib.hpp  rakgit2new.cpp  rakverb.C  rakverb.cpp  rakverb2.C  rakverb2.cpp  rakverb_lib.cpp  rakverb_lib.hpp
extra/rakplay/: CMakeLists.txt  main.cpp
src/: APhaser.C  APhaser.cpp  APhaser.h  APhaser.hpp  Alienwah.C  Alienwah.cpp  Alienwah.h  Alienwah.hpp  AllEffects.hpp  AnalogFilter.C  AnalogFilter.cpp  AnalogFilter.hpp  AppConfig.hpp  Arpie.C  Arpie.cpp  Arpie.h  Arpie.hpp  CMakeLists.txt  Chorus.C  Chorus.cpp  Chorus.h  Chorus.hpp  CoilCrafter.C  CoilCrafter.cpp  CoilCrafter.h  CoilCrafter.hpp  CompBand.C  CompBand.cpp  CompBand.h  CompBand.hpp  Compressor.C  Compressor.cpp  Compressor.hpp  Convolotron.C  Convolotron.cpp  Convolotron.h  Convolotron.hpp  Distorsion.C  Distorsion.cpp  Distorsion.h  (+242 more)
src/gui/qt6/: CMakeLists.txt  EffectSlotBar.cpp  EffectSlotBar.hpp  MainWindow.cpp  MainWindow.hpp  SystemTray.cpp  SystemTray.hpp  ThemeManager.cpp  ThemeManager.hpp  TopBar.cpp  TopBar.hpp  main.cpp  resources.qrc
src/gui/qt6/dialogs/: AboutDialog.cpp  AboutDialog.hpp  BankDialog.cpp  BankDialog.hpp  HelpBrowser.cpp  HelpBrowser.hpp  MidiLearnDialog.cpp  MidiLearnDialog.hpp  OrderDialog.cpp  OrderDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TriggerDialog.cpp  TriggerDialog.hpp
src/gui/qt6/panels/: DelayReverbPanels.cpp  DelayReverbPanels.hpp  DistortionPanels.cpp  DistortionPanels.hpp  DynamicsPanels.cpp  DynamicsPanels.hpp  EQPanel.cpp  EQPanel.hpp  EffectPanel.cpp  EffectPanel.hpp  FilterPanels.cpp  FilterPanels.hpp  MiscPanels.cpp  MiscPanels.hpp  ModulationPanels.cpp  ModulationPanels.hpp  ParamDesc.hpp  PitchPanels.cpp  PitchPanels.hpp  SliderPanel.cpp  SliderPanel.hpp
src/gui/qt6/styles/: dark.qss
src/gui/qt6/widgets/: MidiSlider.cpp  MidiSlider.hpp  Oscilloscope.cpp  Oscilloscope.hpp  SpectrumAnalyzer.cpp  SpectrumAnalyzer.hpp  TunerDisplay.cpp  TunerDisplay.hpp  VUMeter.cpp  VUMeter.hpp
test-audio/: README.md
